--- a/packages/cms/form/form/edit_interface_screen_contents.xml
+++ b/packages/cms/form/form/edit_interface_screen_contents.xml
@@ -10,7 +10,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: edit_interface_screen_contents.xml,v 1.36 2010/09/01 01:06:34 cupreti Exp $
+* $Id: edit_interface_screen_contents.xml,v 1.37 2011/02/16 23:38:47 akarelia Exp $
 *
 */
 -->
@@ -228,5 +228,11 @@
 		<field attribute="mollom_captcha_regen_link_text">
 			<text width="50" />
 		</field>
-	</section>	
+	</section>
+	<section name="Security Enhancement">
+		<field attribute="disable_keyword_replacements">
+			<boolean true_text="yes" false_text="no" />
+		</field>
+	</section>
+
 </contents>
