feature 5182 -- Performance Mode. Additional features: log sql queries as well. new switch to turn Matrix caching on/off.

--- a/core/lib/web/css/performance-ie.css
+++ b/core/lib/web/css/performance-ie.css
@@ -3,6 +3,12 @@
     background-color: #222;
     border: 1px solid #000;
 }
+#perfSummary .perfSwitch {
+    position: relative;
+    background-color: #222;
+    border: 1px solid #000;
+    text-decoration: none
+}
 #perfSummary .perfHighrollers {
     position: relative;
     background-color: #222;
