--- a/core/lib/web/css/performance.css
+++ b/core/lib/web/css/performance.css
@@ -90,6 +90,25 @@ ul ul, ol ol, ul ol, ol ul {
     -moz-box-shadow: 0 0 0px 1px rgba(0,0,0,0.7) inset;
     -webkit-box-shadow: 0 0 0px 1px rgba(0,0,0,0.7) inset;
 }
+#perfSummary .perfSwitch {
+    color: #999;
+    float: left;
+    margin-top: 7px;
+    padding: 0 12px;
+    font-weight: bold;
+    font-size: 11px;
+    line-height: 22px;
+    background-color: rgba(255,255,255,0.15);
+    border-radius: 12px;
+    -moz-border-radius: 12px;
+    box-shadow: 0 0 0px 1px rgba(0,0,0,0.7) inset;
+    -moz-box-shadow: 0 0 0px 1px rgba(0,0,0,0.7) inset;
+    -webkit-box-shadow: 0 0 0px 1px rgba(0,0,0,0.7) inset;
+    text-decoration: none
+}
+#perfSummary .perfSwitch:hover {
+	color:white;
+}
 #perfSummary .perfTotal strong {
     color: #FFF;
     font-size: 13px;
