--- a/core/lib/web/css/performance-ie.css
+++ b/core/lib/web/css/performance-ie.css
@@ -7,7 +7,10 @@
     position: relative;
     background-color: #222;
     border: 1px solid #000;
-    text-decoration: none
+}
+#perfSummary .perfSwitch a {
+      text-decoration: none;
+      color: #999;
 }
 #perfSummary .perfHighrollers {
     position: relative;
