--- a/core/lib/web/css/performance.css
+++ b/core/lib/web/css/performance.css
@@ -104,10 +104,13 @@ ul ul, ol ol, ul ol, ol ul {
     box-shadow: 0 0 0px 1px rgba(0,0,0,0.7) inset;
     -moz-box-shadow: 0 0 0px 1px rgba(0,0,0,0.7) inset;
     -webkit-box-shadow: 0 0 0px 1px rgba(0,0,0,0.7) inset;
-    text-decoration: none
 }
-#perfSummary .perfSwitch:hover {
-	color:white;
+#perfSummary .perfSwitch a {
+      text-decoration: none;
+      color: #999;
+}
+#perfSummary .perfSwitch a:hover {
+    color:white;
 }
 #perfSummary .perfTotal strong {
     color: #FFF;
