--- a/packages/cms/form/form/asset.xml
+++ b/packages/cms/form/form/asset.xml
@@ -13,7 +13,7 @@
 * | you a copy.                                                        |
 * +- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - +
 *
-* $Id: asset.xml,v 1.26 2011/02/16 23:38:47 akarelia Exp $
+* $Id: asset.xml,v 1.27 2013/04/08 07:58:55 ewang Exp $
 *
 */
 -->
@@ -21,7 +21,7 @@
 <asset_info xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="../../../asset.xsd">
 	<package>cms</package>
 	<type_code>form</type_code>
-	<version>0.16</version>
+	<version>0.17</version>
 	<name>Form</name>
 	<description>Form Template</description>
 	<instantiable>yes</instantiable>
