Various updates to the dev version of JS asset map. Notably, getting child assets works in a limited fashion (currently, by clicking any part of the asset). Some status messages now added to the message line (no spinner yet as it needs to be updated to not be a multi-frame PNG).

--- a/core/lib/asset_map/js/js_asset_map.css
+++ b/core/lib/asset_map/js/js_asset_map.css
@@ -89,6 +89,7 @@
     position: relative;
     cursor: pointer;
     font-size: 11px;
+    white-space: nowrap;
 }
 
 #asset_map_container .asset > * {
