Now actually looks like a half-decent tree. 1. Set the target of expansion to just the branch status button (read: the expand/collapse button). Also set it to "expanded" when clicked. 2. Tree set to border-box and scrolling overflow, and sized based on the other elements in the asset map like toolbar, status list etc.

--- a/core/lib/asset_map/js/js_asset_map.css
+++ b/core/lib/asset_map/js/js_asset_map.css
@@ -78,6 +78,9 @@
 
 #asset_map_container .tree {
     padding: 2px;
+    overflow: scroll;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
 }
 
 #asset_map_container .childIndent {
