--- a/core/lib/asset_map/js/js_asset_map.css
+++ b/core/lib/asset_map/js/js_asset_map.css
@@ -120,7 +120,12 @@
 }
 
 #asset_map_container .childIndent {
-    padding-left: 18px;
+    padding-left: 14px;
+    margin-left: 3px;
+}
+
+#asset_map_container .childIndent {
+    background: url(../../web/images/tree/stalk.gif) left 50% repeat-y;
 }
 
 #asset_map_container .childIndent.collapsed {
@@ -185,13 +190,14 @@
     height: 16px;
     background: transparent 50% 50% no-repeat;
     margin-right: 2px;
+    z-index: 2;
 }
 
 #asset_map_container .asset .leaf {
     display: inline-block;
-    width: 16px;
+    width: 20px;
     height: 18px;
-    margin-right: 2px;
+    margin-right: 0px;
     position: relative;
     top: 0px;
 }
@@ -202,7 +208,7 @@
     height: 16px;
     position: absolute;
     top: 1px;
-    left: 3px;
+    left: 5px;
     z-index: 1;
 }
 
@@ -236,8 +242,12 @@
 #asset_map_container .childIndent .asset:first-child .leaf {
     background: url(../../web/images/tree/branch_mid.gif) 50% 50% no-repeat;
 }
+#asset_map_container .asset.last-child + .childIndent {
+    background: none;
+}
 
-#asset_map_container .asset:last-child .leaf {
+#asset_map_container .asset.last-child .leaf,
+#asset_map_container .asset:first-child.last-child .leaf {
     background: url(../../web/images/tree/branch.gif) 50% 50% no-repeat;
 }
 
