1. Fixed spacing of the status list. 2. Automatic resize of asset map implemented.

--- a/core/lib/asset_map/js/js_asset_map.css
+++ b/core/lib/asset_map/js/js_asset_map.css
@@ -166,6 +166,7 @@
 
 #asset_map_container .statusList .asset {
     cursor: default;
+    margin: 2px 0;
 }
 
 #asset_map_container .statusListIcon {
