1. Branch start leaf moved down a pixel. 2. Expand/collapse image reduced so it only covers the button, not the branch around it. This will make it easier to work with so we don't need a separate image if the first item on the tree (ie. Trash) contains children.

--- a/core/lib/asset_map/js/js_asset_map.css
+++ b/core/lib/asset_map/js/js_asset_map.css
@@ -174,7 +174,7 @@
     width: 14px;
     height: 14px;
     margin-right: 2px;
-}
+}*
 
 #asset_map_container .statusDivider {
     background-color: #f5f5f5;
@@ -205,11 +205,11 @@
 
 #asset_map_container .asset .branch-status {
     display: inline-block;
-    width: 16px;
-    height: 16px;
+    width: 11px;
+    height: 11px;
     position: absolute;
-    top: 1px;
-    left: 5px;
+    top: 4px;
+    left: 7px;
     z-index: 1;
 }
 
