Add pointer cursor to the divider

--- a/core/lib/asset_map/js/js_asset_map.css
+++ b/core/lib/asset_map/js/js_asset_map.css
@@ -216,6 +216,7 @@
     border-bottom: 1px outset #999;
     padding: 3px 3px;
     position: relative;
+    cursor: pointer;
 }
 
 #asset_map_container .statusDivider .text {
