--- a/core/lib/asset_map/js/js_asset_map.css
+++ b/core/lib/asset_map/js/js_asset_map.css
@@ -101,6 +101,19 @@
     position: relative;
 }
 
+#asset_map_container * {
+    -moz-user-select: none;
+    -moz-user-select: -moz-none;
+    -ms-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+    cursor: default;
+}
+
+#asset_map_container .errorMsg {
+    position: relative;
+}
+
 #asset_map_container .toolbar {
     background-color: #f5f5f5;
     border-bottom: 1px solid #999;
@@ -161,7 +174,6 @@
 #asset_map_container .asset {
     padding: 0px 3px;
     position: relative;
-    cursor: pointer;
     font-size: 11px;
     white-space: nowrap;
 }
@@ -172,12 +184,12 @@
 
 #asset_map_container .asset .assetName {
     margin: 1px 0;
-    padding: 1px 4px;
+    padding: 1px 3px;
 }
 
 #asset_map_container.statuses-shown .asset .assetName,
 #asset_map_container .asset.selected .assetName {
-    padding: 1px 3px;
+    padding: 1px 2px;
 }
 
 #asset_map_container .statusList {
@@ -264,6 +276,7 @@
     top: 4px;
     left: 7px;
     z-index: 1;
+    cursor: pointer;
 }
 
 #asset_map_container .asset .type2-link,
