--- a/core/lib/asset_map/js/js_asset_map.css
+++ b/core/lib/asset_map/js/js_asset_map.css
@@ -110,8 +110,72 @@
     cursor: default;
 }
 
-#asset_map_container .errorMsg {
+#asset_map_container .menu {
+    background-color: #f5f5f5;
+    border: 1px outset #999;
+    border-left: 1px solid #ccc;
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #999;
+    border-right: 1px solid #999;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+}
+
+#asset_map_container .menu .menuItem {
+    padding: 1px 22px 1px 2px;
+    white-space: nowrap;
     position: relative;
+}
+
+#asset_map_container .menu .menuItem:hover {
+    background-color: #c3c3c3;
+}
+
+#asset_map_container .menu .menuItem.disabled:hover {
+    background-color: #f5f5f5;
+}
+
+#asset_map_container .menu .menuItem * {
+    vertical-align: middle;
+    white-space: nowrap;
+}
+
+#asset_map_container .menu .menuItem .menuIcon {
+    width: 16px;
+    height: 16px;
+    display: inline-block;
+    margin-left: 3px;
+}
+
+#asset_map_container .menu .menuSep {
+    border-bottom: 1px solid #ccc;
+    /*border-top: 1px solid #999;*/
+    height: 1px;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+#asset_map_container .menu .menuItem .menuText {
+    display: inline-block;
+    font: 11px 'Arial', sans-serif;
+    padding: 3px;
+}
+
+#asset_map_container .menu .menuItem .menuChild {
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    position: absolute;
+    right: 0;
+    top: 3px;
+    background: url(../../web/images/icons/asset_map/right_arrow.png) 50% 50% no-repeat;
+}
+
+#asset_map_container .menu .menuItem.disabled {
+    opacity: 0.5;
+    filter: alpha(opacity=50);
 }
 
 #asset_map_container .toolbar {
