--- a/core/lib/asset_map/js/js_asset_map.css
+++ b/core/lib/asset_map/js/js_asset_map.css
@@ -110,7 +110,7 @@
     cursor: default;
 }
 
-#asset_map_container .menu {
+.assetMapMenu {
     background-color: #f5f5f5;
     border: 1px outset #999;
     border-left: 1px solid #ccc;
@@ -123,33 +123,42 @@
     z-index: 10;
 }
 
-#asset_map_container .menu .menuItem {
+.assetMapMenu * {
+    -moz-user-select: none;
+    -moz-user-select: -moz-none;
+    -ms-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+    cursor: default;
+}
+
+.assetMapMenu .menuItem {
     padding: 1px 22px 1px 2px;
     white-space: nowrap;
     position: relative;
 }
 
-#asset_map_container .menu .menuItem:hover {
+.assetMapMenu .menuItem:hover {
     background-color: #c3c3c3;
 }
 
-#asset_map_container .menu .menuItem.disabled:hover {
+.assetMapMenu .menuItem.disabled:hover {
     background-color: #f5f5f5;
 }
 
-#asset_map_container .menu .menuItem * {
+.assetMapMenu .menuItem * {
     vertical-align: middle;
     white-space: nowrap;
 }
 
-#asset_map_container .menu .menuItem .menuIcon {
+.assetMapMenu .menuItem .menuIcon {
     width: 16px;
     height: 16px;
     display: inline-block;
     margin-left: 3px;
 }
 
-#asset_map_container .menu .menuSep {
+.assetMapMenu .menuSep {
     border-bottom: 1px solid #ccc;
     /*border-top: 1px solid #999;*/
     height: 1px;
@@ -157,13 +166,13 @@
     box-sizing: border-box;
 }
 
-#asset_map_container .menu .menuItem .menuText {
+.assetMapMenu .menuItem .menuText {
     display: inline-block;
     font: 11px 'Arial', sans-serif;
     padding: 3px;
 }
 
-#asset_map_container .menu .menuItem .menuChild {
+.assetMapMenu .menuItem .menuChild {
     display: inline-block;
     width: 16px;
     height: 16px;
@@ -173,7 +182,7 @@
     background: url(../../web/images/icons/asset_map/right_arrow.png) 50% 50% no-repeat;
 }
 
-#asset_map_container .menu .menuItem.disabled {
+.assetMapMenu .menuItem.disabled {
     opacity: 0.5;
     filter: alpha(opacity=50);
 }
@@ -324,8 +333,8 @@
 #asset_map_container .statusDivider .icon,
 #asset_map_container .asset .branch-status {
     display: inline-block;
-    width: 11px;
-    height: 11px;
+    width: 12px;
+    height: 12px;
     z-index: 1;
 }
 
@@ -337,7 +346,7 @@
 
 #asset_map_container .asset .branch-status {
     position: absolute;
-    top: 4px;
+    top: 3px;
     left: 7px;
     z-index: 1;
     cursor: pointer;
