--- a/core/lib/asset_map/js/js_asset_map.css
+++ b/core/lib/asset_map/js/js_asset_map.css
@@ -118,7 +118,7 @@
     filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
     position: absolute;
 	white-space: nowrap;
-    top: 107px;
+    top: 130px;
     left: -18px;
     width: 18px;
 }
@@ -126,14 +126,14 @@
 #asset_map_container .tree-list .tab {
 	display: inline-block;
     white-space: nowrap;
-	padding: 2px 5px;
-    background-color: #d2d2d2;
+	padding: 2px 5px 2px 20px;
+    background: url(../../web/images/icons/asset_map/tree.png) left 50% no-repeat #d2d2d2;
     border-radius: 3px 3px 0 0;
 }
 
 #asset_map_container .tree-list .tab.selected {
     background-color: #f5f5f5;
-	padding: 2px 5px 3px;
+	padding-bottom: 3px;
 }
 
 .assetMapMenu {
