Stub code for Use Me mode - ie. the mode invoked by the asset finder widget.

--- a/core/lib/asset_map/js/js_asset_map.css
+++ b/core/lib/asset_map/js/js_asset_map.css
@@ -250,6 +250,10 @@
     display: none;
 }
 
+#asset_map_container.useMeMode .tree {
+    background-color: #D9C4F4;
+}
+
 #asset_map_container .tree.selected {
     display: block;
 }
