--- a/core/lib/asset_map/js/js_asset_map.css
+++ b/core/lib/asset_map/js/js_asset_map.css
@@ -377,7 +377,8 @@
 }
 
 #asset_map_container.statuses-shown .asset .assetName,
-#asset_map_container .asset.selected .assetName {
+#asset_map_container .asset.selected .assetName,
+#asset_map_container .asset.located .assetName {
     padding: 1px 2px;
 }
 
