--- a/core/lib/asset_map/js/js_asset_map.css
+++ b/core/lib/asset_map/js/js_asset_map.css
@@ -146,6 +146,11 @@
     background-color: #B66B00;
 }
 
+#asset_map_container.moveMeMode .tree .asset.moveTarget .assetName,
+#asset_map_container.moveMeMode .tree .asset.selected.moveTarget .assetName {
+	border: 1px solid black;
+}
+
 #asset_map_container {
     position: relative;
     margin-left: 18px;
@@ -398,9 +403,23 @@
 }
 
 #asset_map_container.statuses-shown .asset .assetName,
-#asset_map_container .asset.selected .assetName
-/* #asset_map_container .asset.located .assetName */ {
+#asset_map_container .asset.selected .assetName,
+#asset_map_container.moveMeMode .asset.moveTarget .assetName {
     padding: 1px 2px;
+}
+
+#asset_map_container .selectLine {
+	display: none;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	height: 1px;
+    border-top: 1px solid #000;
+	position: absolute;
+	width: 100%;
+}
+
+#asset_map_container .selectLine.active {
+	display: block;
 }
 
 #asset_map_container .statusList {
