--- a/core/lib/asset_map/js/js_asset_map.css
+++ b/core/lib/asset_map/js/js_asset_map.css
@@ -154,6 +154,10 @@
 #asset_map_container {
     position: relative;
     margin-left: 18px;
+    padding-left: 8px;
+    background-color: #f5f5f5;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
 }
 
 #asset_map_container * {
@@ -195,14 +199,31 @@
     direction: ltr;
     display: inline-block;
     white-space: nowrap;
-    padding: 2px 5px 2px 20px;
-    background: url(../../web/images/icons/asset_map/tree.png) left 50% no-repeat #d2d2d2;
+    margin: 0 -2px;
+    padding: 2px 7px 1px 22px;
+    height: 18px;
+    background: url(../../web/images/icons/asset_map/tree.png) 4px 1px no-repeat #d2d2d2;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
     border-radius: 3px 3px 0 0;
+    border: 1px outset #eee;
+    border-bottom: none;
 }
 
 #asset_map_container .tree-list .tab.selected {
     background-color: #f5f5f5;
     padding-bottom: 3px;
+    position: relative;
+    top: -2px;
+    height: 20px;
+    z-index: 2;
+}
+
+#asset_map_container .tree-list .tab.new {
+    background-image: none;
+    font-weight: bold;
+    padding-left: 5px;
+    border-radius: 3px 0 0 0;
 }
 
 .assetMapMenu {
@@ -329,6 +350,7 @@
     position: absolute;
     bottom: 0;
     width: 100%;
+    margin-left: -8px;
 }
 
 #asset_map_container .messageLine .spinner {
@@ -347,10 +369,12 @@
 }
 
 #asset_map_container .tree {
-    padding: 2px;
+    border-left: 1px solid #999;
+    border-bottom: 1px solid #FFF;
     overflow: scroll;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
+    background-color: white;
     display: none;
 }
 
@@ -384,14 +408,10 @@
 }
 
 #asset_map_container .asset {
-    padding: 0px 3px;
+    padding-right: 3px;
     position: relative;
     font-size: 11px;
     white-space: nowrap;
-}
-
-#asset_map_container .asset.teleported {
-    margin-left: 3px;
 }
 
 #asset_map_container .asset > * {
@@ -436,6 +456,7 @@
     width: 100%;
     padding: 0;
     margin-bottom: -1px;
+    margin-left: -8px;
 }
 
 #asset_map_container .statusList.expanded {
@@ -462,7 +483,6 @@
 
 #asset_map_container .statusDivider {
     background-color: #f5f5f5;
-    border-top: 1px outset #999;
     border-bottom: 1px outset #999;
     padding: 3px 3px;
     position: relative;
@@ -506,13 +526,13 @@
 #asset_map_container .statusDivider .icon {
     position: absolute;
     top: 6px;
-    left: 7px;
+    left: 4px;
 }
 
 #asset_map_container .asset .branch-status {
     position: absolute;
     top: 3px;
-    left: 7px;
+    left: 4px;
     z-index: 1;
     cursor: pointer;
 }
@@ -529,7 +549,7 @@
     height: 16px;
     position: absolute;
     top: 2px;
-    left: 21px;
+    left: 18px;
     z-index: 1;
 }
 
