1. Loaded root asset now documented, and now used as the base for cancelling teleporting. 2. Initial CSS for the drag-to-select rectangle.

--- a/core/lib/asset_map/js/js_asset_map.css
+++ b/core/lib/asset_map/js/js_asset_map.css
@@ -169,6 +169,11 @@
     cursor: default;
 }
 
+#asset_map_container .selectionRect {
+    position: absolute;
+    border: 1px dotted #000;
+}
+
 #asset_map_container .usersel {
     -moz-user-select: text;
     -ms-user-select: text;
