First stage of dragging assets around and rectangular selections. - You can move assets around, but you don't get feedback that they are being dragged   (ie. shadow version of the asset(s) being dragged).   However, when dropped on a target, you get Move/New Link/Clone and these work. - Multi-select context menu now appears but isn't implemented. (This allows non-drag   move/new link/clone.) - Not implemented yet in dragging: auto-expand of a parent (the plan is to auto-open   after 1 second). Also behaviour of out-of-area mouseup (ie. in different frames). - Rectangular selections now appear if you drag outside of an asset but don't select   anything yet. - This code also fixes the issue where ctrl+left click in Firefox was interpreted   as right click.

--- a/core/lib/asset_map/js/js_asset_map.css
+++ b/core/lib/asset_map/js/js_asset_map.css
@@ -171,7 +171,13 @@
 
 #asset_map_container .selectionRect {
     position: absolute;
-    border: 1px dotted #000;
+    border: 1px solid #666;
+    background-color: #DDD;
+    opacity: 0.5;
+    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(opacity=50)";
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    z-index: 20;
 }
 
 #asset_map_container .usersel {
