1. Draggable assets work now.    .. Draggables will be shown as a single line only - if there is a multiple       selection, it will be shown as the base asset type and "2 assets", eg.    .. TODO: auto-expanding when holding over an expandable asset.    .. TODO: handling dragging between tabs or outside the window. 2. Move Me mode refactored into its own sub-object (JS_Asset_Map.moveMe).    .. Done this for simplicity, and because I needed to separate the position       update code for the situation where the location of the move me is being       handled by the draggable, not the underlying tree. 3. Some other refactoring, such as centralising of popup menu positioning.

--- a/core/lib/asset_map/js/js_asset_map.css
+++ b/core/lib/asset_map/js/js_asset_map.css
@@ -160,6 +160,20 @@
     -moz-box-sizing: border-box;
 }
 
+#asset_map_container .dragAsset {
+    opacity: 0.5;
+    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(opacity=50)";
+    position: absolute;
+}
+
+#asset_map_container .dragAsset .asset .branch-status,
+#asset_map_container .dragAsset .asset .left {
+    display: none;
+}
+
+#asset_map_container .dragAsset.multiple .asset .icon {
+}
+
 #asset_map_container * {
     -moz-user-select: none;
     -moz-user-select: -moz-none;
@@ -504,7 +518,7 @@
     display: inline-block;
     width: 16px;
     height: 16px;
-    background: transparent 50% 50% no-repeat;
+    background: url(../../web/images/icons/asset_map/default_asset.png) 50% 50% no-repeat transparent;
     margin-right: 2px;
     z-index: 2;
 }
