--- a/core/lib/asset_map/js/js_asset_map.css
+++ b/core/lib/asset_map/js/js_asset_map.css
@@ -62,26 +62,26 @@
 }
 
 #asset_map_container .tree .asset.located {
-	zoom: 1;
+    zoom: 1;
 }
 
 #asset_map_container .tree .asset.located .statusArchived {
-	background-color: rgba(194, 176, 160, 0.5);
+    background-color: rgba(194, 176, 160, 0.5);
     -ms-filter: "progid:DXImageTransform.Microsoft.Gradient(StartColorStr=#7FC2B0A0, EndColorStr=#7FC2B0A0)";
 }
 
 #asset_map_container .tree .asset.located .statusUnderConstruction {
-	background-color: rgba(170, 204, 221, 0.5);
+    background-color: rgba(170, 204, 221, 0.5);
     -ms-filter: "progid:DXImageTransform.Microsoft.Gradient(StartColorStr=#7FAACCDD, EndColorStr=#7FAACCDD)";
 }
 
 #asset_map_container .tree .asset.located .statusPendingApproval {
-	background-color: rgba(220, 210, 230, 0.5);
+    background-color: rgba(220, 210, 230, 0.5);
     -ms-filter: "progid:DXImageTransform.Microsoft.Gradient(StartColorStr=#7FDCD2E6, EndColorStr=#7FDCD2E6)";
 }
 
 #asset_map_container .tree .asset.located .statusApproved {
-	background-color: rgba(244, 212, 37, 0.5);
+    background-color: rgba(244, 212, 37, 0.5);
     -ms-filter: "progid:DXImageTransform.Microsoft.Gradient(StartColorStr=#7FF4D425, EndColorStr=#7FF4D425)";
 }
 
@@ -91,7 +91,7 @@
 }
 
 #asset_map_container .tree .asset.located .statusLiveApproval {
-	background-color: rgba(80, 208, 0, 0.5);
+    background-color: rgba(80, 208, 0, 0.5);
     -ms-filter: "progid:DXImageTransform.Microsoft.Gradient(StartColorStr=#7F50D000, EndColorStr=#7F50D000)";
 }
 
@@ -101,12 +101,12 @@
 }
 
 #asset_map_container .tree .asset.located .statusEditingApproval {
-	background-color: rgba(204, 124, 199, 0.5);
+    background-color: rgba(204, 124, 199, 0.5);
     -ms-filter: "progid:DXImageTransform.Microsoft.Gradient(StartColorStr=#7FCC7CC7, EndColorStr=#7FCC7CC7)";
 }
 
 #asset_map_container .tree .asset.located .statusEditingApproved {
-	background-color: rgba(238, 154, 0, 0.5);
+    background-color: rgba(238, 154, 0, 0.5);
     -ms-filter: "progid:DXImageTransform.Microsoft.Gradient(StartColorStr=#7FEE9A00, EndColorStr=#7FEE9A00)";
 }
 
@@ -148,7 +148,7 @@
 
 #asset_map_container.moveMeMode .tree .asset.moveTarget .assetName,
 #asset_map_container.moveMeMode .tree .asset.selected.moveTarget .assetName {
-	border: 1px solid black;
+    border: 1px solid black;
 }
 
 #asset_map_container {
@@ -355,6 +355,40 @@
 
 }
 
+#asset_map_container .confirmPopup {
+    position: absolute;
+    left: 5%;
+    width: 90%;
+    border-radius: 5px;
+    top: 40%;
+    z-index: 100;
+    background-color: #d2d2d2;
+
+    -moz-box-shadow: 3px 3px 4px #999;
+    -webkit-box-shadow: 3px 3px 4px #999;
+    box-shadow: 3px 3px 4px #000;
+    -ms-filter: "progid: DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#999999')";
+
+}
+
+#asset_map_container .confirmTitle {
+    text-align: center;
+    font-weight: bold;
+    color: #f5f5f5;
+    padding: 5px;
+    border-radius: 5px 5px 0 0;
+    border-bottom: 1px solid #000;
+    background-color: #342939;
+}
+
+#asset_map_container .confirmBody,
+#asset_map_container .confirmBottom {
+    padding: 5px;
+    text-align: center;
+    color: #000;
+
+}
+
 #asset_map_container .toolbar {
     background-color: #f5f5f5;
     border-bottom: 1px solid #999;
@@ -373,7 +407,7 @@
 
 #asset_map_container .messageLine .spinner {
     display: inline-block;
-	vertical-align: middle;
+    vertical-align: middle;
     width: 15px;
     height: 16px;
     margin-right: 4px;
@@ -443,8 +477,8 @@
 #asset_map_container .asset.disabled .assetName,
 #asset_map_container .asset.disabled .flag,
 #asset_map_container .asset.disabled .icon {
-	opacity: 0.5;
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=50)";
+    opacity: 0.5;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=50)";
 }
 
 #asset_map_container.statuses-shown .asset .assetName,
@@ -454,17 +488,17 @@
 }
 
 #asset_map_container .selectLine {
-	display: none;
-	box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	height: 1px;
+    display: none;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    height: 1px;
     border-top: 1px solid #000;
-	position: absolute;
-	width: 100%;
+    position: absolute;
+    width: 100%;
 }
 
 #asset_map_container .selectLine.active {
-	display: block;
+    display: block;
 }
 
 #asset_map_container .statusList {
@@ -552,6 +586,10 @@
     left: 4px;
     z-index: 1;
     cursor: pointer;
+}
+
+#asset_map_container .asset.teleported {
+    margin: 1px 0 0 3px;
 }
 
 #asset_map_container .asset.teleported .leaf,
